--- a/red-bicicletas/views/layout.pug
+++ b/red-bicicletas/views/layout.pug
@@ -2,6 +2,21 @@ doctype html
 html
   head
     title= title
+
+    // Del startbootstrap small business a través de html to pug
+    meta(charset='utf-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description' content='')
+    meta(name='author' content='')
+    title Small Business - Start Bootstrap Template
+    // Favicon
+    link(rel='icon' type='image/x-icon' href='assets/favicon.ico')
+    // Core theme CSS (includes Bootstrap)
+    link(href='/stylesheets/styles-startbootstrap.css' rel='stylesheet')
+
     link(rel='stylesheet', href='/stylesheets/style.css')
+    // Leaflet (js after css)
+    link(rel='stylesheet' href='https://unpkg.com/leaflet@1.9.4/dist/leaflet.css' integrity='sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=' crossorigin='')
+    script(src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js' integrity='sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=' crossorigin='')
   body
     block content
