New API Bicicletas

--- a/red-bicicletas/views/layout.pug
+++ b/red-bicicletas/views/layout.pug
@@ -18,5 +18,8 @@ html
     //- Leaflet (js after css)
     link(rel='stylesheet' href='https://unpkg.com/leaflet@1.9.4/dist/leaflet.css' integrity='sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=' crossorigin='')
     script(src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js' integrity='sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=' crossorigin='')
+
+    //- jQuery
+    script(src='/javascripts/jquery-3.7.1.min.js')
   body
     block content
