Added module forgotPassword

--- a/red-bicicletas/views/session/forgotPassword.pug
+++ b/red-bicicletas/views/session/forgotPassword.pug
@@ -16,7 +16,7 @@ body#LoginForm
           if info && info.message 
             div.alert.alert-danger
               = info.message
-          h2 Recuperación de password
+          h2 Recuperación de contraseña
           p Por favor, ingrese su email y le enviaremos a esa cuenta las instrucciones de reseteo de password
         form#Login(action='/forgotPassword' method='post')
           .form-group
